Fix Lombok under Java 25, run XML format